fix blurry category box labels, fix h1 font size, fix h1 spacings

--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -164,7 +164,8 @@ hr {
   @media all and (max-width: $global-breakpoint) {
     &,
     * {
-      font-size: 36px;
+      font-size: 36px !important;
+      line-height: 40px !important;
     }
   }
 }
